# comment

./: .gitignore  main.py  pyproject.toml
app/: database.py  models.py  schemas.py  scraper.py
app/routers/: auth.py  export.py  lottery.py  scrape.py
static/: index.html
