[project]
name = "comment"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "playwright>=1.59.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
